--- a/src/index.scss
+++ b/src/index.scss
@@ -63,27 +63,9 @@ header {
   }
 }
 
-.overlay {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.1);
-  z-index: 1;
-}
 
-.drawer {
-  display: flex;
-  flex-direction: column; 
-  position: absolute;
-  right: 0;
-  width: 420px;
-  height: 100%;
-  background: #FFFFFF;
-  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
-  padding: 30px;
-}
+
+
 
 .cartEmpty {
   text-align: center;
@@ -162,6 +144,10 @@ h2 {
 .greenButton {
   position: relative;
 
+  &:disabled {
+    animation: button-loading 0.6s ease-in-out infinite;
+  }
+
   &:hover {
     img {
       transform: translateX(5px);
@@ -186,6 +172,11 @@ h2 {
     font-weight: 500;
     cursor: pointer;
     transition: background 0.1s ease-in-out, transform 0.2s ease-in-out;
+    
+    &:disabled {
+      background: #bebebe !important;
+      cursor: default;
+    }
 
     &:hover {
       background: lighten($color: #9DD558, $amount: 5%);
@@ -232,5 +223,17 @@ h2 {
 
   &:hover {
     opacity: 1 ;
+  }
+}
+
+@keyframes button-loading {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
   }
 }
